# test2

assistant_tcp_interface/: CMakeLists.txt  assistant_tcp_plugins.xml  package.xml
assistant_tcp_interface/include/assistant_tcp_interface/client/: assistant_client.h  assistant_client_base.h  assistant_tcp_client_interface.h
assistant_tcp_interface/include/assistant_tcp_interface/server/: assistant_server.h  assistant_server_base.h  assistant_tcp_server_interface.h
assistant_tcp_interface/include/assistant_tcp_interface/utils/: custom_data_type.h  message_package.h  message_parser.h  message_serializer.h  message_size.h
assistant_tcp_interface/launch/: assistant_client.launch
assistant_tcp_interface/src/: assistant_client_node.cpp  assistant_server_node.cpp  test_async_server.cpp  test_client.cpp  test_server.cpp
assistant_tcp_interface/src/assistant_tcp_interface/client/: assistant_client.cpp  assistant_tcp_client_interface.cpp
assistant_tcp_interface/src/assistant_tcp_interface/server/: assistant_server.cpp  assistant_tcp_server_interface.cpp
assistant_tcp_interface/src/assistant_tcp_interface/utils/: message_package.cpp
compress_image/include/compress_image/: decompress_image.h
digitaltwin_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
digitaltwin_bridge/launch/: digitaltwin_bridge.launch
digitaltwin_bridge/nodes/: digitaltwin_bridge_node.py
digitaltwin_bridge/src/digitaltwin_bridge/: app.py  bridge.py
integration/: CMakeLists.txt  package.xml
integration/msg/: PclTransfer.msg
integration/srv/: SendPcl.srv
pcl_serializer/: CMakeLists.txt  package.xml
pcl_serializer/launch/: deserializer.launch  serializer.launch
pcl_serializer/nodes/: compress_depth_image.cpp  decompress_depth_image.cpp  detectron2_pcl_sync_node.cpp  pcl_deserializer.cpp  pcl_deserializer3.cpp  pcl_serializer.cpp  pcl_serializer2.cpp  pcl_serializer3.cpp
perception_gazebo/: CMakeLists.txt  README.md  package.xml
perception_gazebo/controller/: assistant_controllers.yaml  ur_controllers.yaml
perception_gazebo/launch/: inference_world.launch  rviz.launch  training_world.launch
perception_gazebo/models/box_green/: model.sdf
perception_gazebo/models/box_orange/: model.sdf
perception_gazebo/models/box_red/: model.sdf
perception_gazebo/models/cylinder_1/: model.config  model.sdf
perception_gazebo/models/cylinder_base/: model.config  model.sdf
perception_gazebo/models/cylinder_base/meshes/: cylinder_base.dae
perception_gazebo/models/george/: model.config  model.sdf
perception_gazebo/models/george/meshes/: george.dae  georgeV2.dae  george_walking.dae
perception_gazebo/nodes/: tf2_broadcaster.cpp
perception_gazebo/rviz/: simple.rviz
perception_gazebo/scripts/: spawn_models.py
perception_gazebo/urdf/robots/: sensor_stick.gazebo.xacro  sensor_stick.urdf.xacro
tcp_test/comau_driver/: CMakeLists.txt  package.xml
tcp_test/comau_driver/include/comau_driver/: comau_driver.h
tcp_test/comau_driver/nodes/: receive_node.cpp  send_node.cpp
tcp_test/comau_driver/src/: comau_driver.cpp
tcp_test/comau_tcp_interface/: comau_tcp_client_plugins.xml
tcp_test/comau_tcp_interface/include/comau_tcp_interface/: comau_client_base.h  comau_state_client.h
tcp_test/comau_tcp_interface/include/comau_tcp_interface/utils/: custom_data_type.h  message_package.h  message_size.h
tcp_test/comau_tcp_interface/src/: comau_state_client_node.cpp
tcp_test/comau_tcp_interface/src/comau_tcp_interface/: comau_robot_client.cpp  comau_state_client.cpp
tcp_test/comau_tcp_interface/src/comau_tcp_interface/utils/: message_package.cpp
tcp_test/tcp_interface/: CMakeLists.txt  package.xml
tcp_test/tcp_interface/include/tcp_interface/: comau_robot_client.h  comau_tcp_interface.h
tcp_test/tcp_interface/include/tcp_interface/utils/: message_parser.h  message_serializer.h
tcp_test/tcp_interface/src/: comau_state_client_node.cpp
tcp_test/tcp_interface/src/comau_tcp_interface/: comau_tcp_interface.cpp
zed_msgs/: CMakeLists.txt  package.xml
zed_msgs/msg/: HtpInput.msg  ZedTransfer.msg  pcl.msg
zed_msgs/srv/: ZedTransferService.srv
zed_publisher/: CMakeLists.txt  package.xml
zed_publisher/cfg/: ZEDPublisher.cfg  zed_publisher_config.yaml
zed_publisher/config/: config.yaml  sample.rviz  zed_publisher_config.yaml
zed_publisher/include/: Publisher.hpp  zed_publisher.hpp
zed_publisher/launch/: decompress.launch  depth_proc.launch  rviz.launch  zed_publisher.launch
zed_publisher/msg/: Skeleton.msg
zed_publisher/rviz/: sample.rviz
zed_publisher/src/: Publisher.cpp  camera_test.cpp  compress_depth.cpp  decompress.cpp  zed_publisher.cpp  zed_publisher_node.cpp
zed_subscriber/: CMakeLists.txt  package.xml
zed_subscriber/config/: zed_subscriber_config.yaml
zed_subscriber/include/zed_subscriber/: zed_subscriber.h
zed_subscriber/launch/: rviz.launch  zed_subscriber.launch
zed_subscriber/nodes/: zed_subscriber.cpp
