<?xml version="1.0"?>
<package format="2">
  <name>assistant_tcp_interface</name>
  <version>0.0.0</version>
  <description>The assistant_tcp_interface package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="doc/rosdoc.yaml" />
    <assistant_tcp_interface plugin="${prefix}/assistant_tcp_interface_plugins.xml" />
  </export>
</package>
