<?xml version="1.0"?>
<package format="2">
  <name>digitaltwin_bridge</name>
  <version>0.0.0</version>
  <description>The digitaltwin_bridge package</description>

  <maintainer email="lms@todo.todo">lms</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>
  <build_depend>python3-pip</build_depend>
  <buildtool_depend>python-setuptools</buildtool_depend>
  <build_depend>python-pip</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>integration</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <depend>rosbridge_server</depend>

  <export>
  </export>

</package>
