<?xml version="1.0"?>
<package format="2">
  <name>integration</name>
  <version>0.1.0</version>
  <description>The integration package</description>

  <author>Laboratory for Manufacturing Systems and Automation (LMS) - University of Patras</author>
  <maintainer email="lmsgit@lms.mech.upatras.gr">Laboratory for Manufacturing Systems and Automation (LMS) - University of Patras</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
