<?xml version="1.0"?>
<package format="2">
  <name>pcl_serializer</name>
  <version>0.0.0</version>
  <description>The pcl_serializer package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>  
  <depend>pcl_conversions</depend>    
  <depend>message_filters</depend>    
  <!-- <depend>detectron2_ros</depend>  -->
  <depend>tf2</depend>  
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>integration</depend>

  <export>
  </export>

</package>
