<?xml version="1.0"?>
<package format="2">
  <name>perception_gazebo</name>
  <version>1.2.7</version>
  <description>
      Gazebo wrapper for the Universal UR10 robot arms.
  </description>


  <maintainer email="lms@todo.todo">lms</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
