<?xml version="1.0"?>
<package format="2">
	<name>zed_publisher</name>
	<version>1.0.0</version>
	<description>Human skeleton tracking for the ZED2 camera</description>
	<maintainer email="bakopoulou@lms.mech.upatras.gr">Katerina Bakopoulou</maintainer>>	
	<maintainer email="kampourakis@lms.mech.upatras.gr">Manos Kampourakis</maintainer>
	<author email="bakopoulou@lms.mech.upatras.gr">Katerina Bakopoulou</author>
	<author email="kampourakis@lms.mech.upatras.gr">Manos Kampourakis</author>
	<license>TODO</license>
	<url type="website">https://github.com/LMS-Robotics-VR/zed_human_tracking/</url>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<exec_depend>message_generation</exec_depend>
	<exec_depend>message_runtime</exec_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>

	<depend>message_filters</depend>
	<depend>class_loader</depend>
	<depend>tf</depend>

	<export>
	</export>

</package>