<?xml version="1.0"?>
<package format="2">
	<name>zed_publisher</name>
	<version>1.0.0</version>
	<description>ROS Driver for the ZED2 camera to publish Compress Image and Depth Information</description>
	<maintainer email="angelakis@lms.mech.upatras.gr">Panagiotis Angelakis</maintainer>	
	<maintainer email="bakopoulou@lms.mech.upatras.gr">Katerina Bakopoulou</maintainer>	
	<maintainer email="kampourakis@lms.mech.upatras.gr">Manos Kampourakis</maintainer>
	<author email="angelakis@lms.mech.upatras.gr">Panagiotis Angelakis</author>
	<author email="bakopoulou@lms.mech.upatras.gr">Katerina Bakopoulou</author>
	<author email="kampourakis@lms.mech.upatras.gr">Manos Kampourakis</author>
	<license>TODO</license>
	
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>zed_msgs</depend>
	<depend>compress_depth_image</depend>
	<depend>compress_image</depend>
	<depend>rosparam_shortcuts</depend>

	<export>
	</export>

</package>