<?xml version="1.0"?>
<package format="2">
  <name>comau_driver</name>
  <version>0.1.0</version>
  <description>The comau_driver package</description>

  <author>Laboratory for Manufacturing Systems and Automation (LMS) - University of Patras</author>
  <maintainer email="lmsgit@lms.mech.upatras.gr">Laboratory for Manufacturing Systems and Automation (LMS) - University of Patras</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>boost</build_depend>
  
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>comau_tcp_interface</depend>
  <depend>rosparam_shortcuts</depend>
  

  <doc_depend>doxygen</doc_depend>
  <export>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
  
</package>
