<?xml version="1.0"?>
<package format="2">
  <name>comau_tcp_interface</name>
  <version>0.0.0</version>
  <description>The comau_tcp_interface package</description>

  <author>Laboratory for Manufacturing Systems and Automation (LMS) - University of Patras</author>
  <maintainer email="lmsgit@lms.mech.upatras.gr">Laboratory for Manufacturing Systems and Automation (LMS) - University of Patras</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="doc/rosdoc.yaml" />
    <comau_tcp_interface plugin="${prefix}/comau_tcp_client_plugins.xml" />
  </export>
</package>
